--- a/docs/Visualize Representations.ipynb
+++ b/docs/Visualize Representations.ipynb
@@ -11,6 +11,7 @@
     "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "# Add braintumor_ddpm to path\n",
     "sys.path.append(os.path.dirname(os.getcwd()))\n",
     "\n",
@@ -39,18 +40,18 @@
    ],
    "source": [
     "# Add corresponding paths\n",
-    "extracted_2d_data = r\"C:\\Users\\aalsheno\\Desktop\\Brats outputs\\BraTS Notebook Outputs\\Stacked 2D BRATS Data\\scans\"\n",
-    "trained_ddpm_path = r\"H:\\brats 128x128\\model360000.pt\"\n",
+    "extracted_2d_data = r\"PATH TO EXPORTED 2D SCANS\"\n",
+    "trained_ddpm_path = r\"PATH TO TRAINED MODEL\"\n",
     "\n",
     "# Datasets and Model\n",
     "config = brats_128x128_config()\n",
     "\n",
-    "# Train dataset\n",
-    "train_data = SegmentationDataset(images_dir=extracted_2d_data,\n",
-    "                                 masks_dir=None,\n",
-    "                                 image_size=128,\n",
-    "                                 verbose=False,\n",
-    "                                 train=False)\n",
+    "# Dataset (without scans)\n",
+    "data = SegmentationDataset(images_dir=extracted_2d_data,\n",
+    "                           masks_dir=None,\n",
+    "                           image_size=128,\n",
+    "                           verbose=False,\n",
+    "                           train=False)\n",
     "\n",
     "# Extract representations\n",
     "time_steps = [250, 1000, 2000, 3999]\n",
