--- a/docs/Visualize Representations.ipynb
+++ b/docs/Visualize Representations.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "21160d42",
+   "metadata": {},
+   "source": [
+    "# Visualizing Learned Representations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e02e4782",
+   "metadata": {},
+   "source": [
+    "In this example notebook, we show how to use certain functions from `braintumor_ddppm` to visualize learned represntations from a trained diffusion model. We create a dataset and a feature extractor, which we use to visualize three random samples from the dataset. We select different time-steps and layers for this example, however, one can play around with different parameters and modify the plot accordingly."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "339dbffa",
@@ -43,21 +59,21 @@
     "extracted_2d_data = r\"PATH TO EXPORTED 2D SCANS\"\n",
     "trained_ddpm_path = r\"PATH TO TRAINED MODEL\"\n",
     "\n",
-    "# Datasets and Model\n",
+    "# Configuration used for loading the diffusion model\n",
     "config = brats_128x128_config()\n",
     "\n",
-    "# Dataset (without scans)\n",
+    "# Dataset (without scans, similar to having a test/validation dataset)\n",
     "data = SegmentationDataset(images_dir=extracted_2d_data,\n",
     "                           masks_dir=None,\n",
     "                           image_size=128,\n",
     "                           verbose=False,\n",
     "                           train=False)\n",
     "\n",
-    "# Extract representations\n",
+    "# Parameters\n",
     "time_steps = [250, 1000, 2000, 3999]\n",
     "layers = [14, 16, 18, 20, 22]\n",
     "\n",
-    "# Define feature extractor\n",
+    "# Create a feature extractor\n",
     "feature_extractor = FeatureExtractorDDPM(model_path=trained_ddpm_path,\n",
     "                                         steps=time_steps,\n",
     "                                         blocks=layers,\n",
@@ -122,7 +138,7 @@
     "            ax[row][col].set_xticks([])\n",
     "            ax[row][col].set_yticks([])\n",
     "            \n",
-    "# # Save figure\n",
+    "# # Optionally save the current plot\n",
     "# output_file = os.path.join(os.getcwd(), 'assets', 'representations.png')\n",
     "# plt.savefig(fname=output_file, dpi=300)"
    ]
